--- a/src/main/webapp/WEB-INF/jspf/headtags.jspf
+++ b/src/main/webapp/WEB-INF/jspf/headtags.jspf
@@ -1,5 +1,7 @@
 <%-- any content can be specified here e.g.: --%>
 <%@ page pageEncoding="UTF-8" %>
+<!-- responsive tag -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- favicon/app icon -->
 <link rel="apple-touch-icon" sizes="57x57" href="./icons/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="./icons/apple-icon-60x60.png">
@@ -18,7 +20,6 @@
 <meta name="msapplication-TileColor" content="#3399ff">
 <meta name="msapplication-TileImage" content="./icons/ms-icon-144x144.png">
 <meta name="theme-color" content="#3399ff">
-
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha256-93wNFzm2GO3EoByj9rKZCwGjAJAwr0nujPaOgwUt8ZQ=" crossorigin="anonymous">
 <!-- JS, Popper.js, and jQuery -->
 <!--Don't use code.jquery it will fail in China and delay the internet-->
